# obsidiantime

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MONITORING_README.md  NEED.md  README.md  SEO_README.md  docker-compose.coolify.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  nginx.conf  nginx.prod.conf  pyproject.toml  ruff.toml
obsidiantime/chat/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
obsidiantime/chat/migrations/: 0001_initial.py
obsidiantime/config/: asgi.py  settings.py  storage_backends.py  urls.py  wsgi.py
obsidiantime/gallery/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
obsidiantime/gallery/migrations/: 0001_initial.py
obsidiantime/main/: admin.py  apps.py  context_processors.py  forms.py  metrics.py  middleware.py  models.py  signals.py  urls.py  views.py
obsidiantime/main/migrations/: 0001_initial.py  0002_change_video_to_file.py  (+6 more)
obsidiantime/seo/: admin.py  apps.py  constants.py  context_processors.py  decorators.py  models.py  services.py  urls.py  utils.py  views.py
static/css/: bootstrap.min.css  components.css  style.css
static/js/: chat.js  feedback.js  forms.js  gallery.js  main.js  notifications.js  ui.js
templates/: base.html
templates/chat/: chat.html
templates/gallery/: gallery_list.html  meme_detail.html  my_memes.html  top_memes.html  upload_meme.html
templates/main/: about.html  add_quote.html  admin_feedback_detail.html  admin_feedback_list.html  feedback.html  feedback_detail.html  home.html  my_feedback.html  quote_detail.html  quotes_list.html
templates/registration/: login.html  register.html
templates/seo/: admin.html  analytics.html  robots.txt  sitemap.xml  structured_data.json
(+5 files in other folders)
